slight fix to #sources elem which was too narrow

--- a/ch10code/css/drinks.css
+++ b/ch10code/css/drinks.css
@@ -41,7 +41,9 @@ h1 {
 #sources {
   background-color:gray;
   top:650px;
-  width: 800px;
+  /* need the important to override 
+  the '#bar section' selector */
+  width: 800px !important;
   margin-left: -20px;
   padding:20px;
   color:white;
